Fix export user data by fields api